fix table overflow on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,9 +157,10 @@ main > p {
 }
 
 
-table tr {
-    text-align: left;
-    float: left;
+/* to stop overflow of email address in table on small screens */
+tr>td {
+    text-wrap: wrap;
+    overflow-wrap: break-word;
 }
 
 /* ================================================================================ */
